Update footer organization name in index.html

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="value">${a.vigencia}</div>
 
         <div class="footer">
-          Asociación Boliviana de Instructores Militares<br>
+          Asociación Boliviana de Ingenieros Militares<br>
           Verificación QR oficial
         </div>
       `;
