--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
       font-size: 0.85em;
       color: #777;
     }
+    .foto-container {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 15px;
+    }
+    
+    #fotoAsociado {
+      width: 140px;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 6px;
+      border: 2px solid #ddd;
+    }
+
   </style>
 </head>
 
@@ -81,6 +95,9 @@
 
       app.innerHTML = `
         <h1>✅ CREDENCIAL VÁLIDA</h1>
+        <div class="foto-container">
+          <img id="fotoAsociado" src="" alt="Foto del asociado">
+        </div>
 
         <div class="label">Nombre</div>
         <div class="value">${a.nombres} ${a.apellidos}</div>
