Refactor index.html for improved readability and structure

--- a/index.html
+++ b/index.html
@@ -1,89 +1,25 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Verificación QR ABIM</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<script>
+const SUPABASE_URL = "https://robjczsumjidmhfsacua.supabase.co";
+const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJvYmpjenN1bWppZG1oZnNhY3VhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyMjI3MjEsImV4cCI6MjA4NTc5ODcyMX0.IfU2olTfkQ2KrepGomFX_-GTL6s_YLMRDwgNh_wpMVg";
 
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f2f2f2;
-      margin: 0;
-      padding: 0;
-    }
-    .card {
-      max-width: 480px;
-      margin: 40px auto;
-      background: white;
-      border-radius: 10px;
-      padding: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,.15);
-      text-align: center;
-    }
-    .ok { border-top: 8px solid #2ecc71; }
-    .error { border-top: 8px solid #e74c3c; }
+const app = document.getElementById("app");
+const params = new URLSearchParams(window.location.search);
+const id = params.get("id");
 
-    h1 { margin-top: 0; }
+if (!id) {
+  app.classList.add("error");
+  app.innerHTML = "<h1>❌ Error</h1><p>ID no proporcionado</p>";
+  throw new Error("ID no proporcionado");
+}
 
-    .label {
-      font-weight: bold;
-      margin-top: 10px;
-    }
-    .value {
-      margin-bottom: 6px;
-    }
-
-    .footer {
-      margin-top: 20px;
-      font-size: 0.85em;
-      color: #777;
-    }
-    .foto-container {
-      display: flex;
-      justify-content: center;
-      margin-bottom: 15px;
-    }
-    
-    #fotoAsociado {
-      width: 140px;
-      height: 180px;
-      object-fit: cover;
-      border-radius: 6px;
-      border: 2px solid #ddd;
-    }
-
-  </style>
-</head>
-
-<body>
-  <div id="app" class="card">
-    <h1>Verificando credencial…</h1>
-    <p>Espere un momento</p>
-  </div>
-
-  <script>
-    const SUPABASE_URL = "https://robjczsumjidmhfsacua.supabase.co";
-    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJvYmpjenN1bWppZG1oZnNhY3VhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyMjI3MjEsImV4cCI6MjA4NTc5ODcyMX0.IfU2olTfkQ2KrepGomFX_-GTL6s_YLMRDwgNh_wpMVg";
-
-    const app = document.getElementById("app");
-    const params = new URLSearchParams(window.location.search);
-    const id = params.get("id");
-
-    if (!id) {
-      app.classList.add("error");
-      app.innerHTML = "<h1>❌ Error</h1><p>ID no proporcionado</p>";
-      throw new Error("ID no proporcionado");
-    }
-
-    fetch(${SUPABASE_URL}/rest/v1/asociados?id=eq.${id}, {
-      headers: {
-        apikey: SUPABASE_ANON_KEY,
-        Authorization: Bearer ${SUPABASE_ANON_KEY}
-      }
-    })
-    .then(r => r.json())
-   .then(data => {
+fetch(`${SUPABASE_URL}/rest/v1/asociados?id=eq.${id}`, {
+  headers: {
+    apikey: SUPABASE_ANON_KEY,
+    Authorization: `Bearer ${SUPABASE_ANON_KEY}`
+  }
+})
+.then(r => r.json())
+.then(data => {
   if (!data.length) {
     app.classList.add("error");
     app.innerHTML = "<h1>❌ NO VÁLIDO</h1><p>Asociado no encontrado</p>";
@@ -93,7 +29,7 @@
   const a = data[0];
   app.classList.add("ok");
 
-  app.innerHTML = 
+  app.innerHTML = `
     <h1>✅ CREDENCIAL VÁLIDA</h1>
 
     <div class="foto-container">
@@ -122,18 +58,17 @@
       Asociación Boliviana de Ingenieros Militares<br>
       Verificación QR oficial
     </div>
-  ;
+  `;
 
-  // ✅ AQUÍ MISMO (dentro del then)
   const foto = document.getElementById("fotoAsociado");
-
-  if (a.foto_asociado_url && a.foto_asociado_url.startsWith("http")) {
+  if (foto && a.foto_asociado_url) {
     foto.src = a.foto_asociado_url;
-  } else {
-    foto.style.display = "none";
   }
 })
+.catch(err => {
+  console.error(err);
+  app.classList.add("error");
+  app.innerHTML = "<h1>❌ Error del sistema</h1>";
+});
+</script>
 
-  </script>
-</body>
-</html>
