Refactor QR verification logic in index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-<!DOCTYPE html> <html lang="es"> <head> <meta charset="UTF-8"> <title>Verificación QR ABIM</title> <meta name="viewport" content="width=device-width, initial-scale=1"> <style> body { font-family: Arial, sans-serif; background: #f2f2f2; margin: 0; padding: 0; } .card { max-width: 480px; margin: 40px auto; background: white; border-radius: 10px; padding: 20px; box-shadow: 0 4px 12px rgba(0,0,0,.15); text-align: center; } .ok { border-top: 8px solid #2ecc71; } .error { border-top: 8px solid #e74c3c; } h1 { margin-top: 0; } .label { font-weight: bold; margin-top: 10px; } .value { margin-bottom: 6px; } .footer { margin-top: 20px; font-size: 0.85em; color: #777; } .foto-container { display: flex; justify-content: center; margin-bottom: 15px; } #fotoAsociado { width: 140px; height: 180px; object-fit: cover; border-radius: 6px; border: 2px solid #ddd; } </style> </head> <body> <div id="app" class="card"> <h1>Verificando credencial…</h1> <p>Espere un momento</p> </div> <script> const SUPABASE_URL = "https://robjczsumjidmhfsacua.supabase.co"; const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJvYmpjenN1bWppZG1oZnNhY3VhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyMjI3MjEsImV4cCI6MjA4NTc5ODcyMX0.IfU2olTfkQ2KrepGomFX_-GTL6s_YLMRDwgNh_wpMVg"; const app = document.getElementById("app"); const params = new URLSearchParams(window.location.search); const id = params.get("id"); if (!id) { app.classList.add("error"); app.innerHTML = "<h1>❌ Error</h1><p>ID no proporcionado</p>"; throw new Error("ID no proporcionado"); } fetch(${SUPABASE_URL}/rest/v1/asociados?id=eq.${id}, { headers: { apikey: SUPABASE_ANON_KEY, Authorization: Bearer ${SUPABASE_ANON_KEY} } }) .then(r => r.json()) .then(data => { if (!data.length) { app.classList.add("error"); app.innerHTML = "<h1>❌ NO VÁLIDO</h1><p>Asociado no encontrado</p>"; return; } const a = data[0]; app.classList.add("ok"); app.innerHTML = <h1>✅ CREDENCIAL VÁLIDA</h1> <div class="foto-container"> <img id="fotoAsociado" src="" alt="Foto del asociado"> </div> <div class="label">Nombre</div> <div class="value">${a.nombres} ${a.apellidos}</div> <div class="label">CI</div> <div class="value">${a.ci}</div> <div class="label">Grado</div> <div class="value">${a.grado}</div> <div class="label">Fuerza</div> <div class="value">${a.fuerza}</div> <div class="label">Estado</div> <div class="value">${a.estado}</div> <div class="label">Vigencia</div> <div class="value">${a.vigencia}</div> <div class="footer"> Asociación Boliviana de Ingenieros Militares<br> Verificación QR oficial </div> ; }) .catch(err => { console.error(err); app.classList.add("error"); app.innerHTML = "<h1>❌ Error del sistema</h1>"; }); </script> </body> </html>
+const SUPABASE_URL = "https://robjczsumjidmhfsacua.supabase.co";
+const SUPABASE_ANON_KEY = "TU_ANON_KEY_AQUI";
+
+const params = new URLSearchParams(window.location.search);
+const id = params.get("id");
+
+const contenedor = document.getElementById("resultado");
+
+if (!id) {
+  contenedor.innerHTML = "<p class='error'>ID no proporcionado</p>";
+  throw new Error("ID faltante");
+}
+
+fetch(`${SUPABASE_URL}/rest/v1/asociados?id=eq.${id}`, {
+  headers: {
+    apikey: SUPABASE_ANON_KEY,
+    Authorization: `Bearer ${SUPABASE_ANON_KEY}`,
+    Accept: "application/json"
+  }
+})
+.then(res => res.json())
+.then(data => {
+  if (!data.length) {
+    contenedor.innerHTML = "<p class='error'>Asociado no encontrado</p>";
+    return;
+  }
+
+  const a = data[0];
+
+  // 1️⃣ Construimos HTML
+  contenedor.innerHTML = `
+    <h2 class="ok">✔ Credencial válida</h2>
+
+    <img id="fotoAsociado"
+         alt="Foto del asociado"
+         style="display:none; width:120px; border-radius:8px; margin-bottom:10px;" />
+
+    <p><b>Nombre:</b> ${a.nombres} ${a.apellidos}</p>
+    <p><b>CI:</b> ${a.ci}</p>
+    <p><b>Grado:</b> ${a.grado}</p>
+    <p><b>Fuerza:</b> ${a.fuerza}</p>
+    <p><b>Vigencia:</b> ${a.vigencia}</p>
+    <p><b>Estado:</b> ${a.estado}</p>
+  `;
+
+  // 2️⃣ Ahora sí asignamos la imagen
+  const fotoImg = document.getElementById("fotoAsociado");
+
+  if (a.foto_asociado_url && a.foto_asociado_url.startsWith("http")) {
+    fotoImg.src = a.foto_asociado_url;
+    fotoImg.style.display = "block";
+  }
+})
+.catch(err => {
+  contenedor.innerHTML = "<p class='error'>Error al consultar</p>";
+  console.error(err);
+});
