--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       margin: 0;
       padding: 0;
     }
+
     .card {
       max-width: 480px;
       margin: 40px auto;
@@ -20,9 +21,12 @@
       padding: 20px;
       box-shadow: 0 4px 12px rgba(0,0,0,.15);
       text-align: center;
+      border-top: 8px solid #ccc;
     }
-    .ok { border-top: 8px solid #2ecc71; }
-    .error { border-top: 8px solid #e74c3c; }
+
+    .verde    { border-top-color: #2ecc71; }
+    .amarillo { border-top-color: #f1c40f; }
+    .rojo     { border-top-color: #e74c3c; }
 
     h1 { margin-top: 0; }
 
@@ -30,6 +34,7 @@
       font-weight: bold;
       margin-top: 10px;
     }
+
     .value {
       margin-bottom: 6px;
     }
@@ -43,7 +48,7 @@
     .foto-container {
       display: flex;
       justify-content: center;
-      margin-bottom: 15px;
+      margin: 15px 0;
     }
 
     #fotoAsociado {
@@ -63,79 +68,74 @@
   </div>
 
   <script>
-    const SUPABASE_URL = "https://robjczsumjidmhfsacua.supabase.co";
-    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJvYmpjenN1bWppZG1oZnNhY3VhIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyMjI3MjEsImV4cCI6MjA4NTc5ODcyMX0.IfU2olTfkQ2KrepGomFX_-GTL6s_YLMRDwgNh_wpMVg";
+    // 🔐 SOLO Edge Function (FASE B)
+    const EDGE_FUNCTION_URL =
+      "https://robjczsumjidmhfsacua.functions.supabase.co/verificar_asociado";
 
     const app = document.getElementById("app");
     const params = new URLSearchParams(window.location.search);
     const id = params.get("id");
 
     if (!id) {
-      app.classList.add("error");
-      app.innerHTML = "<h1>❌ Error</h1><p>ID no proporcionado</p>";
+      app.classList.add("rojo");
+      app.innerHTML = "<h1>ID NO PROPORCIONADO</h1>";
       throw new Error("ID no proporcionado");
     }
 
-    fetch(`${SUPABASE_URL}/rest/v1/asociados_publicos?id=eq.${id}`, {
-      headers: {
-        apikey: SUPABASE_ANON_KEY,
-        Authorization: `Bearer ${SUPABASE_ANON_KEY}`
-      }
-    })
-    .then(r => r.json())
-    .then(data => {
-      if (!data.length) {
-        app.classList.add("error");
-        app.innerHTML = "<h1>❌ NO VÁLIDO</h1><p>Asociado no encontrado</p>";
-        return;
-      }
+    fetch(`${EDGE_FUNCTION_URL}?id=${encodeURIComponent(id)}`)
+      .then(r => r.json())
+      .then(data => {
 
-      const a = data[0];
-      app.classList.add("ok");
+        // 🔹 Limpiar colores anteriores
+        app.classList.remove("verde", "amarillo", "rojo");
 
-      app.innerHTML = `
-        <h1>✅ CREDENCIAL VÁLIDA</h1>
+        // 🔹 Aplicar color decidido por backend
+        if (data.color) {
+          app.classList.add(data.color);
+        }
 
-        <div class="foto-container">
-          <img id="fotoAsociado" alt="Foto del asociado">
-        </div>
+        // 🔹 Mensaje oficial (NO HARDCODEADO)
+        let html = `
+          <h1>${data.mensaje}</h1>
+        `;
 
-        <div class="label">Grado</div>
-        <div class="value">${a.grado}</div>
+        // 🔹 Datos mínimos del asociado
+        if (data.asociado) {
+          html += `
+            <div class="foto-container">
+              <img id="fotoAsociado"
+                   src="${data.asociado.foto}"
+                   alt="Foto del asociado">
+            </div>
 
-        <div class="label">Nombre</div>
-        <div class="value">${a.nombres} ${a.apellidos}</div>
+            <div class="label">Grado</div>
+            <div class="value">${data.asociado.grado}</div>
 
-        <div class="label">CI</div>
-        <div class="value">${a.ci}</div>
+            <div class="label">Nombre</div>
+            <div class="value">
+              ${data.asociado.nombres} ${data.asociado.apellidos}
+            </div>
 
-        <div class="label">Fuerza</div>
-        <div class="value">${a.fuerza}</div>
+            <div class="label">Fuerza</div>
+            <div class="value">${data.asociado.fuerza}</div>
+          `;
+        }
 
-        <div class="label">Estado</div>
-        <div class="value">${a.estado}</div>
+        html += `
+          <div class="footer">
+            Asociación Boliviana de Ingenieros Militares<br>
+            Verificación QR oficial
+          </div>
+        `;
 
-        <div class="label">Vigencia</div>
-        <div class="value">${a.vigencia}</div>
-
-        <div class="footer">
-          Asociación Boliviana de Ingenieros Militares<br>
-          Verificación QR oficial
-        </div>
-      `;
-
-      const foto = document.getElementById("fotoAsociado");
-      if (a.foto_asociado_url && a.foto_asociado_url.startsWith("http")) {
-        foto.src = a.foto_asociado_url;
-      } else {
-        foto.style.display = "none";
-      }
-    })
-    .catch(err => {
-      console.error(err);
-      app.classList.add("error");
-      app.innerHTML = "<h1>❌ Error del sistema</h1>";
-    });
+        app.innerHTML = html;
+      })
+      .catch(err => {
+        console.error(err);
+        app.classList.remove("verde", "amarillo");
+        app.classList.add("rojo");
+        app.innerHTML = "<h1>ERROR DE VERIFICACIÓN</h1>";
+      });
   </script>
 </body>
 </html>
