Add CI label and value to index.html
Added CI label and value to display associated CI data.

--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
               ${data.asociado.nombres} ${data.asociado.apellidos}
             </div>
 
+            <div class="label">CI</div>
+            <div class="value">
+              ${data.asociado.ci ?? "—"}
+            </div>
+
             <div class="label">Fuerza</div>
             <div class="value">${data.asociado.fuerza}</div>
           `;
