Add colons to labels in index.html

--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
                    alt="Foto del asociado">
             </div>
 
-            <div class="label">Grado</div>
+            <div class="label">Grado:</div>
             <div class="value">${data.asociado.grado}</div>
 
-            <div class="label">Nombre</div>
+            <div class="label">Nombre:</div>
             <div class="value">
               ${data.asociado.nombres} ${data.asociado.apellidos}
             </div>
 
-            <div class="label">CI</div>
+            <div class="label">CI:</div>
             <div class="value">
               ${data.asociado.ci ?? "—"}
             </div>
