Add 'Vigencia' section to index.html
Add 'Vigencia' label and value to display data.

--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
 
             <div class="label">Fuerza</div>
             <div class="value">${data.asociado.fuerza}</div>
+
+            <div class="label">Vigencia</div>
+            <div class="value">
+              ${data.asociado.vigencia ?? "—"}
+            </div>
           `;
         }
 
