Update footer with QR access benefits note
Added a note about the validity of the QR access benefits.

--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
           <div class="footer">
             Asociación Boliviana de Ingenieros Militares<br>
             Verificación QR oficial
+            </br>
+            *Válido solamente para el acceso a los beneficios de los convenios de A.B.I.M.
           </div>
         `;
 
