Add background image to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
+    background-image: url("assets/ABIM.jpg");
     body {
       font-family: Arial, sans-serif;
       background: #f2f2f2;
