--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style>
-    background-image: url("assets/sin fondo.jpg");
+    
     body {
       font-family: Arial, sans-serif;
       background: #f2f2f2;
@@ -59,6 +59,8 @@
       border-radius: 6px;
       border: 2px solid #ddd;
     }
+
+    background-image: url("assets/sin fondo.png");
   </style>
 </head>
 
