--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <title>Verificación QR ABIM</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <style>
-    
+  <style>    
     body {
       font-family: Arial, sans-serif;
       background: #f2f2f2;
@@ -15,15 +14,40 @@
     }
 
     .card {
-      max-width: 480px;
-      margin: 40px auto;
-      background: white;
-      border-radius: 10px;
-      padding: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,.15);
-      text-align: center;
-      border-top: 8px solid #ccc;
-    }
+  max-width: 480px;
+  margin: 40px auto;
+  background: white;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 4px 12px rgba(0,0,0,.15);
+  text-align: center;
+  border-top: 8px solid #ccc;
+
+  /* necesario para la marca de agua */
+  position: relative;
+  overflow: hidden;
+}
+
+/* Marca de agua ABIM */
+.card::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-image: url("assets/sinfondo.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 60%;
+  opacity: 0.08;          /* ajusta visibilidad */
+  pointer-events: none;
+  z-index: 0;
+}
+
+/* El contenido va encima de la marca */
+.card > * {
+  position: relative;
+  z-index: 1;
+}
+
 
     .verde    { border-top-color: #2ecc71; }
     .amarillo { border-top-color: #f1c40f; }
@@ -60,7 +84,7 @@
       border: 2px solid #ddd;
     }
 
-    background-image: url("assets/sinfondo.png");
+    
   </style>
 </head>
 
