Update background image in card style
Changed background image in card style.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   content: "";
   position: absolute;
   inset: 0;
-  background-image: url("assets/sinfondo.png");
+  background-image: url("assets/ABIM.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: 60%;
