Add labels to Fuerza and Vigencia sections

--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
               ${data.asociado.ci ?? "—"}
             </div>
 
-            <div class="label">Fuerza</div>
+            <div class="label">Fuerza:</div>
             <div class="value">${data.asociado.fuerza}</div>
 
-            <div class="label">Vigencia</div>
+            <div class="label">Vigencia:</div>
             <div class="value">
               ${data.asociado.vigencia ?? "—"}
             </div>
@@ -161,9 +161,9 @@
         }
 
         html += `
-          <div class="footer">
+          <div class="footer"><strong>
             Asociación Boliviana de Ingenieros Militares<br>
-            Verificación QR oficial
+            Verificación QR oficial </strong>
             <br><br>
             *Válido solamente para el acceso a los beneficios de los convenios de A.B.I.M.
           </div>
